# ACTIONet

./: .gitmodules  ACTIONet.code-workspace  DESCRIPTION  LICENSE  MANIFEST.in  NAMESPACE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: actionet.yml  mini_actionet.yml
R/: AnnData_io.R  RcppExports.R  annotation.R  batch_correct.R  clusters.R  imputation.R  main.R  network_tools.R  normalization.R  plots.R  utils_internal.R  utils_plotting.R  utils_public.R
docker_mro/: Dockerfile  Makefile  run.sh
docker_mro/files/: Makevars  Rprofile.site  install_actionet.R  install_actionet_deps.R
include/R/: arma_base.h
include/base/: base.h
include/common/misc/: my_utils.h
inst/include/: ACTIONet_RcppExports.h
man/: plot.top.k.features.Rd
mini_docker/: Dockerfile  Makefile  run.sh
mini_docker/files/: install_actionet.sh  install_actionet_deps.R  install_irkernel.R  r_environment.yml
src/: ACTIONet.cpp  Makevars  RcppExports.cpp
src/ACTIONet/network_construction/: build_network.cc
