[metadata]
name = tardis
version = 0.1.0
author = Shahin Mohammadi
author_email = shmohammadi@gmail.com
description = ACTIONet single-cell analysis framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shmohammadi/ACTIONet
project_urls =
    Bug Tracker = https://github.com/pypa/ACTIONet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent

[options]
package_dir =
    = ACTIONet
    packages = find:
    python_requires = >=3.8

[options.packages.find]
where = ACTIONet